# codegen

./: MANIFEST.in  README.md  common.mjs  form.mjs  index.mjs  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: common.py  components.py  forms.py  pages.py
bases/: Form  Form.txt
src/: main.py
src/app/: common.py  forms.py  pages.py
src/bases/: Form.txt  Page.txt
src/forms/: Cadastro.tsx
